--- a/Task 1.css
+++ b/Task 1.css
@@ -8,6 +8,7 @@ h1
     color: aqua;
     font-size: 350%;
     margin-left: 5%;
+    font-weight: 100;
 }
 h3{
     text-indent: 0%;
@@ -23,7 +24,7 @@ h3{
     width: 22%;
     margin-left: 5%;
     text-indent: 20px;
-    font-size: 80%;
+    font-size: 90%;
 }
 #P2
 {
@@ -32,7 +33,7 @@ h3{
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 10%;
     width: 22%;
-    font-size: 80%;
+    font-size: 90%;
 }
 #P3
 {
@@ -41,7 +42,7 @@ h3{
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 8%;
     width: 22%;
-    font-size: 80%;
+    font-size: 90%;
 }
 #fb_img
 {
